styles.css
body{
    background-color: #fff;
    margin: 0;
    padding: 0;
    font-family: "Adobe Clean", "adobe-clean", sans-serif;
} 

img {
    max-width: 100%;
}

* {
    box-sizing: border-box;
}

header {
    position: sticky;
    top: 0;
		display: flex;
    height: 64px;
    padding-left: 32px;
    padding-right: 32px;
    border-bottom: 1px solid #eaeaea;
    font-size: 14px;
    font-weight: 700;
    color: #505050;
    text-decoration: none;
    background-color: #fff;
    z-index: 10;
}

header .icon {
    height: 24px;
    width: 20px;
    margin-right: 8px;
}

header p {
    padding: 16px;
    display: flex;
    align-items: center;
    margin-top: 0;
    margin-bottom: 0;
}

header p:last-child {
  margin-left: auto;
}

header p:last-child a {
  text-decoration: none;
}

header ul {
    display: flex;
    list-style: none;
    margin-top: 0;
    margin-bottom: 0;
}

header ul li {
    display: flex;
    align-items: center;
    padding: 16px 48px 24px;
    border-left: 1px solid #eaeaea;
    height: calc(100% + 1px);
}

header ul li:last-child {
  border-right: 1px solid #eaeaea;
}

header ul li a {
    font-size: 14px;
    font-weight: 400;
    color: #505050;
    text-decoration: none;
}

footer {
  background-color: #fafafa;
}

footer .section-wrapper > div {
  padding-top: 48px;
  padding-bottom: 32px;
  max-width: 1280px;
  margin: 0 auto;
  width: 100%;
}

footer>div:first-of-type div > ul {
  grid-template-areas: "apis blogs support developer";
  display: grid;
  list-style: none;
  grid-template-columns: 30% 22% 19%;
  gap: 32px;
  padding-inline-start: 0;
}

footer>div:first-of-type div > ul > li > p {
  margin-top: 0;
  font-family: adobe-clean-ux,adobe-clean,Source Sans Pro,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,sans-serif;
  font-size: 16px;
  font-weight: 700;
  line-height: 20.8px;
  color: rgb(44,44,44);
}

footer>div:first-of-type div > ul > li:nth-child(n+1):nth-child(-n+3) {
  border-right: 2px solid #e1e1e1;
}

footer>div:first-of-type div > ul > li > ul {
  list-style: none;
  padding-inline-start: 0;

}

footer>div:first-of-type div > ul > li:first-of-type ul  {
  column-count: 2;
}

footer>div:first-of-type div > ul > li > ul li {
  /*padding-top: 16px; */
}

footer>div:first-of-type div > ul > li > ul li a {
  text-decoration: none;
  font-size: 14px;
  color: rgb(75, 75, 75);
  cursor: pointer;
  font-family: adobe-clean-ux,adobe-clean,Source Sans Pro,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,sans-serif;
  font-weight: 400;
  line-height: 21px;
}

footer>div:first-of-type div > ul > li > ul li a:hover {
  text-decoration: underline;
  text-decoration-color: rgb(75, 75, 75);
}

footer>div:nth-of-type(2) div > ul {
    display: flex;
}

footer>div:nth-of-type(2) div > ul > li {
    padding: 16px;
    list-style: none;
}

footer>div:nth-of-type(2) div > ul > li ul li a {
  text-decoration: none;
  color: red;
}


main .section-wrapper > div {
    margin: auto;

    padding: 16px;
}

main a:any-link {
	color: #1473e6;
	text-decoration: none;
}

main .icon {
	height: 40px;
	width: 40px;
}

.button {
	border-width: 2px;
	border-style: solid;
	border-radius: 16px;
	min-height: 32px;
	height: auto;
	min-width: 72px;
	padding: 4px 14px;
	padding-bottom: 4.5px;
	padding-top: 3.5px;
	font-size: 14px;
	font-weight: 700;
	transition: background .13s ease-out, border-color .13s ease-out, color .13s ease-out, box-shadow .13s ease-out;
  line-height: 1.3;
  -webkit-appearance: none;
}

.button.primary {
	background-color: #1473e6;
	border-color: #1473e6;
	color: #fff;
}

.button.primary:hover {
	background-color: #0d66d0;
	border-color: #0d66d0;
	color: #fff;
}

.button.secondary {
	background-color: transparent;
	border-color: #505050;
	color: #505050;
}

.button.secondary:hover {
	background-color: #505050;
	border-color: #505050;
	color: #fff;
}

main div.hero {
	display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
}

main div.hero {
	color: white;
	background-size: cover;
	text-align: center;
	padding: 1em;
	background-position: center center;
}

main div.hero>div {
  display: flex;
  flex-direction: column;
  flex-basis: 100%;
  flex: 1;
}

main div.hero h1 {
	font-family: adobe-clean-serif, "Source Serif Pro", Georgia, serif;
	font-size: 45px;
	font-weight: 700;
}

main div.hero p {
	display: block;
	font-family: adobe-clean-ux, adobe-clean, "Source Sans Pro", -apple-system, system-ui, "Segoe UI", Roboto, sans-serif;
	font-size: 18px;
	font-weight: 400;
	line-height: 27px;

}

main div.embed-container {
	text-align: center;
	max-width: 640px;
	margin: auto;
}

